# LlamaIndex-Slack-Bot

./: .gitignore  README.md  app.py  bot.py  pyproject.toml
