[tool.poetry]
name = "llamaindex-slackbot"
version = "0.1.0"
description = "Context Aware Slackbot"
authors = ["Varun Pillai"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
llama-index = "^0.10.11"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.1"
flask = "^2.3.2"
qdrant-client = "^1.7.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
